<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soem_beckhoff_drivers_msgs</name>
  <version>0.1.1</version>
  <description>
     soem_beckhoff_drivers_msgs containsthe messages for the beckhoff drivers  </description>
  <maintainer email="ruben@intermodalics.eu"> Ruben Smits</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/soem_master</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>


 <buildtool_depend>ament_cmake</buildtool_depend>
 <buildtool_depend>rosidl_default_generators</buildtool_depend>

 <depend>rtt</depend>
  <depend>soem</depend>
  <depend>soem_master</depend>


 <build_depend>builtin_interfaces</build_depend>

 <exec_depend>builtin_interfaces</exec_depend>
 <exec_depend>rosidl_default_runtime</exec_depend>

 <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



