<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soem_master</name>
  <version>0.1.1</version>
  <description>
    soem_master contains a C++ wrapper around soem_core, a factory object to register and create drivers and a RTT component that will automatically create the drivers and their services for all the slave for which a driver is known.
  </description>

  <maintainer email="ruben@intermodalics.eu"> Ruben Smits</maintainer>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/soem_master</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rtt_ros2</depend>
  <depend>rtt_ros2_params</depend>
  <depend>rtt_ros2_std_msgs</depend>
  <depend>soem</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
